@@ -59,9 +59,9 @@ Jukka:
 	  RANDPARETO(), RANDRAYLEIGH(), RANDTDIST(), RANDUNIFORM(), and
 	  RANDWEIBULL().
 	* New random distributions for the random number generation tool:
-	  Beta, Cauchy, Chi-Squared, F, Gamma, Geometric, Laplace, Logarithmic,
-	  Logistic, Lognormal, Pareto, Rayleigh, T, Type I Gumbel,
-	  Type II Gumbel, and Weibull.
+	  Beta, Cauchy, Chi-Squared, F, Gamma, Geometric, Laplace, 
+	  Levy alpha-Stable, Logarithmic, Logistic, Lognormal, Pareto,
+	  Rayleigh, T, Type I Gumbel, Type II Gumbel, and Weibull.
 
 Morten:
 	* Improve the Applix importer.
