@@ -1,5 +1,9 @@
 2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
+	* random-generator.c (tool_random_engine): Added Levy.
+
+2002-07-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
+
 	* random-generator.c (tool_random_engine): Added Gamma, Geometric,
 	Laplace, Logarithmic, Logistic, Lognormal, Pareto, Rayleigh, T,
 	Type I Gumbel, and Type II Gumbel.
